--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^16.0.0",
+    "sharp": "^0.34.1",
+    "svgo": "^3.3.2",
     "vite": "^6.3.1",
     "vite-plugin-image-optimizer": "^1.1.8"
   }
