--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "sharp": "^0.34.1",
     "svgo": "^3.3.2",
     "vite": "^6.3.1",
-    "vite-plugin-image-optimizer": "^1.1.8"
+    "vite-plugin-image-optimizer": "^1.1.8",
+    "vite-plugin-sitemap": "^0.8.2",
+    "vite-plugin-static-copy": "^3.0.0"
   }
 }
