--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-intersection-observer": "^9.16.0",
     "react-router-dom": "^7.5.1",
     "react-slick": "^0.30.3",
-    "slick-carousel": "^1.8.1"
+    "slick-carousel": "^1.8.1",
+    "vite-ssg": "^27.0.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.22.0",
